# TheoryGrabber

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  client_secret.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
migrations/20171105160253_papers/: down.sql  up.sql
src/: arxiv.rs  config.rs  drive.rs  drive_oauth.rs  eccc.rs  gui.rs  lib.rs  main.rs  paper_dialog.rs  schema.rs  types.rs
