[package]
name = "theory_grabber"
license = "GPL-3.0-only"
version = "2.18.1"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]
edition = "2021"
categories = ["command-line-utilities"]
repository = "https://github.com/Narfinger/TheoryGrabber"
description = "Downloads papers from arxiv and eccc and stores them in a local directory. Saves the last date looked at."


[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
chrono = { version = "0.4.38", features = [
    "serde",
] } # Date and time library for Rust
chrono-tz = "0.9"
log = "0.4.22"
pretty_env_logger = "0.5.0"
indicatif = "0.17.8"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = [
    'blocking',
    'json',
] } # higher level HTTP client library
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.12.0"
toml = "0.8.19"
#oauth2 = "4.1.0"
quick-xml = "0.36.1"
nom = "7.1.3"
url = "2.5.2"
directories = "5.0.1"
itertools = "0.13.0"
ratatui = "0.28.0"
crossterm = "0.28.1"
