[package]
name = "theory_grabber"
license = "GPL-3.0-only"
version = "2.18.5"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]
edition = "2021"
categories = ["command-line-utilities"]
repository = "https://github.com/Narfinger/TheoryGrabber"
description = "Downloads papers from arxiv and eccc and stores them in a local directory. Saves the last date looked at."


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.49", features = ["derive"] }
console = "0.15.11"
chrono = { version = "0.4.41", features = [
    "serde",
] } # Date and time library for Rust
chrono-tz = "0.10"
log = "0.4.27"
pretty_env_logger = "0.5.0"
indicatif = "0.18.0"
rayon = "1.10.0"
reqwest = { version = "0.12.23", features = [
    'blocking',
    'json',
] } # higher level HTTP client library
select = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.9.5"
#oauth2 = "4.1.0"
quick-xml = "0.38.0"
nom = "8.0.0"
url = "2.5.4"
directories = "6.0.0"
itertools = "0.14.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
